--- a/css/styles.css
+++ b/css/styles.css
@@ -5,24 +5,14 @@ margin: 0;
 padding: 0;
 }
 
-.container {
-	padding: 50px;
-	width: 100%;
-	height: 100%;
-}
-.row {
-width: 100%;
-	margin: auto;
-	height: auto;
-}
 
-section {
-margin: 10px;
+.meal {
+
 background-color: dimgrey;
-border: 2px solid #000;
+border: 1px solid #000;
 }
 
-section p {
+.meal p {
 	margin-top: 50px;
 	padding: 20px;
 }
@@ -38,44 +28,89 @@ float: right;
 clear: both;
 margin: 0;
 padding: 5px;
-border: 2px solid #000;
+border: 1px solid #000;
 }
 
-.chicken h2 {
+#chicken  {
 	background-color: hotpink;
 }
 
-.beef h2 {
+#beef  {
 		background-color: indianred;
 		color: #FFF;
 }
 
-.sushi h2 {
+#sushi  {
 	background-color: lightgoldenrodyellow;
 }
 
 
 @media (min-width: 992px) {
-.chicken, .beef, .sushi {
-	float: left;
-	width: 31%;
-}
+.col-lg-4 {
+        float: left;
+        padding: 10px;
+      }
+     
+      .col-lg-4 {
+        width: 33.33%;
+      }
+    
 }
 
-@media (min-width: 768px) and (max-width:  991px) {
-
-.chicken, .beef {
-		float: left;
-	width: 47%;
-
-}
-.sushi {
-	float: left;
-}
+@media (min-width: 768px) and (max-width: 991px) {
+     .col-md-6, .col-md-12 {
+        float: left;
+        padding: 15px;
+      }
+      
+      .col-md-6 {
+        width: 50%;
+      }
+     
+      .col-md-12 {
+        width: 100%;
+      }
 }
 
 @media (max-width: 767px) {
-
-.sushi {
-	}
+    .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+        float: left;
+        padding: 15px;
+      }
+      .col-sm-1 {
+        width: 8.33%;
+      }
+      .col-sm-2 {
+        width: 16.66%;
+      }
+      .col-sm-3 {
+        width: 25%;
+      }
+      .col-sm-4 {
+        width: 33.33%;
+      }
+      .col-sm-5 {
+        width: 41.66%;
+      }
+      .col-sm-6 {
+        width: 50%;
+      }
+      .col-sm-7 {
+        width: 58.33%;
+      }
+      .col-sm-8 {
+        width: 66.66%;
+      }
+      .col-sm-9 {
+        width: 75%;
+      }
+      .col-sm-10 {
+        width: 83.33%;
+      }
+      .col-sm-11 {
+        width: 91.66%;
+      }
+      .col-sm-12 {
+        width: 100%;
+      }
 }
